# observable-property

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake
include/observable_property/: ObservableProperty.hpp
include/observable_property/juce/: LiveObservableProperty.hpp  callOnMessageThreadIfNotNull.hpp
scripts/: download_and_copy_boost.py
tests/: CMakeLists.txt
tests/src/: ObservablePropertyTests.cpp
tests/src/juce/: LiveObservablePropertyTests.cpp
